fix colors in openwrt 24.10 in dark mode
/cgi-bin/luci/admin/status/nftables: .ifacebadge a
/cgi-bin/luci/admin/network/network: .cbi-value-description a
/cgi-bin/luci/admin/system/admin/uhttpd: .cbi-value-description abbr

--- a/htdocs/luci-static/argon/less/dark.less
+++ b/htdocs/luci-static/argon/less/dark.less
@@ -174,6 +174,9 @@ a:-webkit-any-link {
     color: var(--dark-primary);
 }
 
+.ifacebadge a:-webkit-any-link, .cbi-value-description a:-webkit-any-link {
+    color: #a5b2ff;
+}
 
 input:-webkit-autofill {
     background-color: #3c3c3c !important;
@@ -189,6 +192,10 @@ input:-webkit-autofill {
     border-color: var(--dark-primary) !important;
 }
 
+.cbi-value-description abbr {
+    color: #11cdef;
+    color: var(--info);
+}
 
 .cbi-section em {
     color: #ccc;
